# batlehub

./: .cspell.json  .dockerignore  .gitignore  .noidle  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.hardened  DESLOPPIFY_RESUME.md  Dockerfile  Dockerfile.hardened  LICENSE  README.md  ROADMAP.md  SECURITY.md  Taskfile.yml  config.example-s3.toml  config.example-space.toml  config.example.toml  config.s3.toml  deny.toml  devfile.yaml  docker-compose.s3.yml  docker-compose.yml  gitleaks.toml  mise.toml  sonar-project.properties  updatecli-compose.yaml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/api/: admin.rs  auth.rs  mod.rs  owner.rs  package.rs  publish.rs  registry.rs  setup.rs  version.rs
cli/src/cli/: admin.rs  auth.rs  config_cmd.rs  download.rs  mod.rs  owner.rs  package.rs  publish.rs  registry.rs  setup.rs  version.rs
cli/src/tui/: admin_stats.rs  help.rs  list_nav.rs  login.rs  mod.rs  package_detail.rs  package_list.rs  publish_form.rs  registry_list.rs  setup_wizard.rs
cli/tests/: integration.rs
crates/adapters/: Cargo.toml
crates/adapters/migrations/: 001_init.sql  002_artifact_storage.sql  003_user_tokens.sql  004_artifact_size_bytes.sql  005_metadata_cache.sql  006_local_packages.sql  007_artifact_cache_meta.sql  008_quota.sql  009_local_packages_status.sql  010_rate_limit.sql  011_package_ownership.sql  012_signing.sql  013_beta_channel.sql  014_ip_blocks.sql  015_team_namespaces.sql  016_package_visibility.sql  017_access_events_idx.sql  018_config_changes.sql  019_system_kv.sql  020_artifact_sboms.sql  021_access_events_covering_idx.sql  022_notification_subscriptions.sql  023_inbound_webhook_events.sql  024_notification_subs_gin_index.sql  025_artifact_vulnerabilities.sql  026_artifact_cache_checksum.sql  027_deprecation_unlisting.sql  028_user_blocks.sql  029_audit_ip_ua.sql  030_access_events_nullable_target.sql
crates/adapters/src/: in_memory.rs  lib.rs  migrations.rs
crates/adapters/src/auth/: actions_oidc.rs  kubernetes.rs  mod.rs  oidc.rs  token.rs  user_token.rs
crates/adapters/src/cache/: banner_memory.rs  banner_redis.rs  in_memory.rs  mod.rs  postgres.rs  redis.rs  warm_coordinator.rs
crates/adapters/src/db/: artifact_meta.rs  banner_pg.rs  beta_channel.rs  config_change.rs  mod.rs  ownership.rs  postgres.rs  quota.rs  sbom.rs  storage_admin.rs  team_namespace.rs  user_block.rs  user_tokens.rs  vulnerability.rs
crates/adapters/src/in_memory/: artifact_meta.rs  mod.rs  ownership.rs  package_repo.rs  quota.rs  sbom.rs  storage.rs  team_namespace.rs  user_tokens.rs  vulnerability.rs
crates/adapters/src/local_registry/: in_memory.rs  mod.rs  postgres.rs
crates/adapters/src/notification/: memory.rs  mod.rs  postgres.rs
crates/adapters/src/rate_limit/: in_memory.rs  ip_block_in_memory.rs  ip_block_postgres.rs  ip_block_redis.rs  mod.rs  postgres.rs  redis.rs
crates/adapters/src/registry/: cargo.rs  composer.rs  conda.rs  fanout.rs  github.rs  goproxy.rs  http_client.rs  maven.rs  mod.rs  npm.rs  nuget.rs  openvsx.rs  path_proxy.rs  pypi.rs  rubygems.rs  terraform.rs  vscode_marketplace.rs
crates/adapters/src/repo/: deb.rs  mod.rs  openpgp.rs  pacman.rs  rpm.rs
crates/adapters/src/sbom/: extractor.rs  fetcher.rs  mod.rs
crates/adapters/src/storage/: filesystem.rs  mod.rs  router.rs  s3.rs
crates/adapters/src/vulnerability/: mod.rs  osv.rs
crates/adapters/tests/: actions_oidc.rs  artifact_meta.rs  local_registry.rs  pg_cache.rs  pg_rate_limit.rs  pg_vulnerability.rs  redis_cache.rs  redis_rate_limit.rs  redis_warm_coordinator.rs  repo_interop.rs  s3_storage.rs  selfhosted.rs  storage_router.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/entities/: access_log.rs  banner.rs  explore.rs  identity.rs  local_package.rs  mod.rs  notification.rs  package.rs  registry_kind.rs  sbom.rs  team_namespace.rs  vulnerability.rs
crates/core/src/ports/: artifact_meta.rs  auth.rs  auth_config.rs  banner.rs  beta_channel.rs  cache_store.rs  config_change.rs  ip_block_store.rs  local_registry.rs  mod.rs  notification.rs  package_repo.rs  quota.rs  registry.rs  sbom.rs  storage.rs  team_namespace.rs  user_token_repo.rs  vulnerability.rs
crates/core/src/rules/: block_list.rs  cve_gate.rs  deny_latest.rs  mod.rs  rbac.rs  release_age.rs  signed_release.rs  trusted_publisher.rs  version_gate.rs
crates/core/src/services/: admin.rs  cache_control.rs  eviction.rs  explore_cache.rs  (+10 more)
crates/examples/: Cargo.toml
crates/examples/src/: lib.rs
crates/examples/tests/: local_registry.rs  real_proxy.rs  smoke.rs  structure.rs
crates/web/: Cargo.toml
crates/web/src/: access.rs  badges.rs  error.rs  extractors.rs  lib.rs
crates/web/tests/: admin_access_check.rs  admin_health_and_bulk.rs  admin_packages.rs  admin_stats.rs  banner_and_config_reload.rs  beta_channel.rs  bulk_and_quota_and_cache.rs  cargo_and_downloads.rs  dynamic_groups.rs  explore.rs  integration.rs  ip_blocks.rs  local_cargo_registry.rs  local_composer_registry.rs  local_go_registry.rs  local_maven_registry.rs  local_npm_registry.rs  local_nuget_registry.rs  local_rubygems_proxy.rs  local_vsx_registry.rs  misc_standalone_endpoints.rs  namespaces_and_visibility.rs  notifications.rs  proxy_basic.rs  proxy_cargo_edge_cases.rs  proxy_npm_edge_cases.rs  proxy_openvsx_vscode_goproxy.rs  publish_traversal_guards.rs  rate_limit.rs  repo_deb_rpm_pacman.rs  sbom_and_misc.rs  terraform.rs  tokens_and_pagination.rs  upload_traversal_and_enforcement.rs  user_blocks.rs  vuln_findings.rs  vuln_proxy_endpoints.rs
examples/pypi/: .mise.toml  pip.conf  pyproject.toml
examples/pypi/publish/: .pypirc  pyproject.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_deny_latest.rs  fuzz_package_id_cache_key.rs  fuzz_rbac_evaluate.rs  fuzz_release_age.rs
patches/sqlx-macros/: Cargo.toml
patches/sqlx-macros/src/: lib.rs
patches/sqlx-mysql/: Cargo.toml
patches/sqlx-mysql/src/: lib.rs
server/: Cargo.toml
server/src/: builders.rs  hot_config.rs  main.rs  server_factory.rs  setup.rs  stores.rs  watcher.rs
(+586 files in other folders)
