[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/config",
    "crates/adapters",
    "crates/web",
    "server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.metadata.llvm-cov]
# Exclude server startup wiring from coverage — it's integration-tested separately.
exclude = ["server/src/main.rs"]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP server
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# OpenAPI
utoipa = { version = "5", features = ["actix_extras", "chrono", "uuid"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

# Tracing / OTEL
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# AWS S3 (optional, for storage-s3 feature)
aws-sdk-s3 = "1"
aws-config = "1"
