[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/config",
    "crates/adapters",
    "crates/web",
    "crates/examples",
    "server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.lints.clippy]
wildcard_imports = "deny"

[workspace.metadata.llvm-cov]
# Exclude server startup wiring from coverage — it's integration-tested separately.
exclude = ["server/src/main.rs"]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP server
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream", "form"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# OpenAPI
utoipa = { version = "5", features = ["actix_extras", "chrono", "uuid"] }
utoipa-actix-web = "0.1"
utoipa-scalar = { version = "0.3", features = ["actix-web"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Tracing / OTEL
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
tracing-actix-web = { version = "0.7", default-features = false }
tracing-opentelemetry = "0.33"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }

# Database — default-features = false to avoid sqlx-macros → sqlx-macros-core →
# sqlx-mysql → rsa (RUSTSEC-2023-0071, no upstream fix available).
# Migrations are embedded via Migration::new() + include_str! in db/postgres.rs.
# sqlx-macros is further patched to a no-dep stub (see [patch.crates-io] below).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
glob = "0.3"
semver = "1"
base64 = "0.22"
quick-xml = "0.40"
argon2 = { version = "0.5", features = ["std"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Testing utilities
tempfile = "3"

# AWS S3 (optional, for storage-s3 feature)
# default-features = false to avoid legacy-rustls-ring (hyper 0.14 / rustls 0.21 / rustls-webpki 0.101)
# which is vulnerable to RUSTSEC-2026-0098/0099/0104.  The new default-https-client path
# uses rustls-aws-lc / hyper 1.x / rustls 0.23 / rustls-webpki 0.103 (patched).
aws-sdk-s3 = { version = "1", default-features = false }
aws-config = { version = "1", default-features = false }

# Patch sqlx-macros with a no-dep stub.
# sqlx-macros is an optional dep of sqlx that is never compiled (the `macros` feature
# is disabled), but Cargo still resolves it with its full transitive chain:
#   sqlx-macros → sqlx-macros-core → sqlx-mysql → rsa (RUSTSEC-2023-0071)
# Replacing it with a local stub removes those packages from the lock file entirely.
[patch.crates-io]
sqlx-macros = { path = "patches/sqlx-macros" }
sqlx-mysql  = { path = "patches/sqlx-mysql" }
