[package]
name = "batlehub-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "batlehub-cli"
path = "src/main.rs"

[dependencies]
# Async
tokio = { workspace = true }
# HTTP client
reqwest = { workspace = true, features = ["json", "stream", "multipart", "query"] }
# Stream large downloads to disk
futures = { workspace = true }
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
# Error handling
anyhow = { workspace = true }
# CLI
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = "4"
# Dates
chrono = { workspace = true }
# UUIDs
uuid = { workspace = true }
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
# Text input widget for TUI
tui-input = "0.15"
# Config dir resolution
dirs = "6"
# Pretty table output for plain CLI mode
comfy-table = "7"
# Publish payload encoding (npm attachments, checksums)
base64 = { workspace = true }
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
batlehub-web      = { path = "../crates/web" }
batlehub-adapters = { path = "../crates/adapters" }
batlehub-core     = { path = "../crates/core" }
batlehub-config   = { path = "../crates/config" }
tokio             = { workspace = true }
actix-web         = { workspace = true }
utoipa-actix-web  = { workspace = true }
tempfile          = { workspace = true }
serde_json        = { workspace = true }
reqwest           = { workspace = true, features = ["blocking"] }
zip               = "8"
mockito           = "1"

[lints]
workspace = true
