[package]
name = "batlehub-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "batlehub"
path = "src/main.rs"

[features]
storage-s3 = ["batlehub-adapters/storage-s3"]

[dependencies]
batlehub-core = { path = "../crates/core" }
batlehub-config = { path = "../crates/config" }
batlehub-adapters = { path = "../crates/adapters" }
batlehub-web = { path = "../crates/web" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
utoipa.workspace = true
utoipa-actix-web.workspace = true
utoipa-swagger-ui.workspace = true
anyhow.workspace = true
actix-web.workspace = true
actix-files.workspace = true
actix-cors.workspace = true
reqwest.workspace = true
clap.workspace = true
