[package]
name = "batlehub-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "batlehub"
path = "src/main.rs"

[features]
default = ["cache-redis"]
storage-s3 = ["batlehub-adapters/storage-s3"]
cache-redis = ["batlehub-adapters/cache-redis"]

[dependencies]
batlehub-core = { path = "../crates/core" }
batlehub-config = { path = "../crates/config" }
batlehub-adapters = { path = "../crates/adapters" }
batlehub-web = { path = "../crates/web" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
utoipa.workspace = true
utoipa-actix-web.workspace = true
utoipa-swagger-ui.workspace = true
anyhow.workspace = true
sqlx.workspace = true
actix-web.workspace = true
actix-files.workspace = true
actix-cors.workspace = true
reqwest.workspace = true
clap.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
regex.workspace = true

[lints]
workspace = true
