[package]
name = "batlehub-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "batlehub"
path = "src/main.rs"

[features]
default = ["cache-redis", "sbom", "jemalloc"]
storage-s3 = ["batlehub-adapters/storage-s3"]
cache-redis = ["batlehub-adapters/cache-redis"]
sbom = ["batlehub-adapters/sbom"]
# Use jemalloc as the global allocator. Reduces RSS/fragmentation under
# concurrent load; disable with --no-default-features on platforms where
# jemalloc doesn't build (e.g. some musl targets).
jemalloc = ["tikv-jemallocator"]

[dependencies]
tikv-jemallocator = { version = "0.7", optional = true }
batlehub-core = { path = "../crates/core" }
batlehub-config = { path = "../crates/config" }
batlehub-adapters = { path = "../crates/adapters" }
batlehub-web = { path = "../crates/web" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
utoipa.workspace = true
utoipa-actix-web.workspace = true
utoipa-scalar.workspace = true
anyhow.workspace = true
sqlx.workspace = true
actix-web.workspace = true
actix-files.workspace = true
actix-cors.workspace = true
reqwest.workspace = true
clap.workspace = true
notify.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
regex.workspace = true

[dev-dependencies]
toml.workspace = true
serde.workspace = true

[lints]
workspace = true
