[package]
name = "batlehub-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["auth-token", "auth-oidc", "auth-kubernetes", "auth-actions-oidc", "storage-fs", "registry-github", "registry-npm", "registry-cargo", "registry-openvsx", "registry-goproxy", "registry-vscode-marketplace", "registry-maven", "registry-terraform", "registry-rubygems", "registry-composer", "db-postgres", "local-registry"]
auth-token = []
auth-oidc = ["dep:jsonwebtoken"]
auth-kubernetes = []
auth-actions-oidc = ["dep:jsonwebtoken", "dep:glob", "dep:regex"]
storage-fs = []
storage-s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
cache-redis = ["dep:redis"]
registry-github = []
registry-cargo = []
registry-npm = []
registry-openvsx = []
registry-goproxy = []
registry-vscode-marketplace = []
registry-maven = []
registry-terraform = []
registry-rubygems = ["dep:flate2", "dep:tar"]
registry-pypi = []
registry-composer = ["dep:zip"]
db-postgres = []
local-registry = ["db-postgres"]

[dependencies]
batlehub-core = { path = "../core" }
batlehub-config = { path = "../config" }
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
sqlx.workspace = true
tracing.workspace = true
jsonwebtoken = { version = "10", features = ["aws_lc_rs"], optional = true }
glob = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
redis = { version = "1", features = ["tokio-comp", "connection-manager"], optional = true }
aws-sdk-s3 = { workspace = true, optional = true, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-config = { workspace = true, optional = true, features = ["default-https-client", "rt-tokio", "credentials-process"] }
base64 = "0.22"
sha2 = "0.10"
argon2.workspace = true
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
zip = { version = "2", optional = true }
rand = "0.9"
hex = "0.4"

[dev-dependencies]
mockito = "1"
rcgen = "0.14"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
toml = { workspace = true }

[lints]
workspace = true
