[package]
name = "batlehub-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
aws-config = {
  workspace = true,
  features = ["default-https-client", "credentials-process", "rt-tokio"],
  optional = true
}
aws-sdk-s3 = {
  workspace = true,
  features = ["default-https-client", "http-1x", "rt-tokio", "sigv4a"],
  optional = true
}
base64 = "0.22"
batlehub-config = { path = "../config" }
batlehub-core = { path = "../core" }
bytes.workspace = true
chrono.workspace = true
bzip2 = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true }
futures.workspace = true
glob = { workspace = true, optional = true }
hex = "0.4"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"], optional = true }
rand = "0.10"
redis = {
  version = "1",
  features = ["connection-manager", "tokio-comp"],
  optional = true
}
regex = { workspace = true, optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11"
sqlx.workspace = true
tar = { version = "0.4", optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zip = { version = "8", optional = true }

[dev-dependencies]
mockito = "1"
rcgen = "0.14"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
toml = { workspace = true }

[features]
default = [
  "auth-actions-oidc",
  "auth-kubernetes",
  "auth-oidc",
  "auth-token",
  "db-postgres",
  "local-registry",
  "registry-cargo",
  "registry-composer",
  "registry-conda",
  "registry-github",
  "registry-goproxy",
  "registry-maven",
  "registry-npm",
  "registry-openvsx",
  "registry-pypi",
  "registry-rubygems",
  "registry-terraform",
  "registry-vscode-marketplace",
  "storage-fs"
]
auth-actions-oidc = ["dep:glob", "dep:jsonwebtoken", "dep:regex"]
auth-kubernetes = []
auth-oidc = ["dep:jsonwebtoken"]
auth-token = []
cache-redis = ["dep:redis"]
db-postgres = []
local-registry = ["db-postgres"]
registry-cargo = []
registry-composer = ["dep:zip"]
registry-github = []
registry-goproxy = []
registry-maven = []
registry-npm = []
registry-openvsx = []
registry-conda = ["dep:bzip2", "dep:zip", "dep:zstd", "dep:tar"]
registry-pypi = []
registry-rubygems = ["dep:flate2", "dep:tar"]
registry-terraform = []
registry-vscode-marketplace = []
storage-fs = []
storage-s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

[lints]
workspace = true
