[package]
name = "batlehub-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
aws-config = {
  workspace = true,
  features = ["default-https-client", "credentials-process", "rt-tokio"],
  optional = true
}
aws-sdk-s3 = {
  workspace = true,
  features = ["default-https-client", "http-1x", "rt-tokio", "sigv4a"],
  optional = true
}
base64 = "0.22"
batlehub-config = { path = "../config" }
batlehub-core = { path = "../core" }
bytes.workspace = true
chrono.workspace = true
bzip2 = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true }
# Deb/RPM repository hosting (all pure-Rust; none pull the banned `rsa` crate).
ar = { version = "0.9", optional = true }
lzma-rs = { version = "0.3", optional = true }
md-5 = { version = "0.11", optional = true }
sha1 = { version = "0.11", optional = true }
ed25519-dalek = { version = "2", optional = true }
rpm = { version = "0.25", default-features = false, features = [
  "gzip-compression",
  "xz-compression",
  "zstd-compression",
], optional = true }
futures.workspace = true
glob = { workspace = true, optional = true }
hex = "0.4"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"], optional = true }
rand = "0.10"
redis = {
  version = "1",
  features = ["connection-manager", "tokio-comp"],
  optional = true
}
regex = { workspace = true, optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11"
sqlx.workspace = true
tar = { version = "0.4", optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
quick-xml = { workspace = true, optional = true }
zip = { version = "8", optional = true }

[dev-dependencies]
# Building .deb/.rpm fixtures for unit tests and the apt/dnf interop generator
# (`tests/repo_interop.rs`). These are dev-only so they never reach production.
ar = "0.9"
flate2 = "1"
mockito = "1"
rcgen = "0.14"
# Test-only: the `payload` feature unlocks `rpm::PackageBuilder` / `FileOptions` for
# building `.rpm` fixtures. Pulls no extra crates (`payload = []`) — notably not the
# banned `rsa`, which only arrives via `signature-pgp`.
rpm = { version = "0.25", default-features = false, features = ["payload", "gzip-compression"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tar = "0.4"
tokio-rustls = "0.26"
toml = { workspace = true }

[features]
default = [
  "auth-actions-oidc",
  "auth-kubernetes",
  "auth-oidc",
  "auth-token",
  "db-postgres",
  "local-registry",
  "registry-cargo",
  "registry-composer",
  "registry-conda",
  "registry-deb",
  "registry-forgejo",
  "registry-github",
  "registry-gitlab",
  "registry-goproxy",
  "registry-rpm",
  "registry-maven",
  "registry-npm",
  "registry-openvsx",
  "registry-pypi",
  "registry-nuget",
  "registry-rubygems",
  "registry-terraform",
  "registry-vscode-marketplace",
  "registry-jetbrains",
  "sbom",
  "storage-fs",
  "vuln-scan"
]
auth-actions-oidc = ["dep:glob", "dep:jsonwebtoken", "dep:regex"]
auth-kubernetes = []
auth-oidc = ["dep:jsonwebtoken"]
auth-token = []
cache-redis = ["dep:redis"]
db-postgres = []
local-registry = ["db-postgres"]
registry-cargo = []
registry-composer = ["dep:zip"]
registry-forgejo = []
registry-github = []
registry-gitlab = []
registry-goproxy = []
registry-maven = []
registry-npm = []
registry-nuget = ["dep:zip"]
registry-openvsx = []
registry-conda = ["dep:bzip2", "dep:zip", "dep:zstd", "dep:tar"]
registry-deb = [
  "dep:ar",
  "dep:flate2",
  "dep:tar",
  "dep:lzma-rs",
  "dep:zstd",
  "dep:md-5",
  "dep:sha1",
  "dep:ed25519-dalek",
]
registry-rpm = [
  "dep:rpm",
  "dep:flate2",
  "dep:quick-xml",
  "dep:ed25519-dalek",
  "dep:sha1",
]
registry-pypi = []
# JetBrains IDE-archive proxy cache. Reuses the generic `PathProxyRegistryClient`
# (shared with deb/rpm), so it needs no extra dependencies.
registry-jetbrains = []
registry-rubygems = ["dep:flate2", "dep:tar"]
registry-terraform = []
registry-vscode-marketplace = []
storage-fs = []
storage-s3 = ["dep:aws-config", "dep:aws-sdk-s3"]
sbom = ["db-postgres", "dep:flate2", "dep:tar", "dep:zip", "dep:quick-xml"]
vuln-scan = ["db-postgres"]

[lints]
workspace = true
