[package]
name = "batlehub-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
anyhow.workspace = true
tracing.workspace = true
metrics.workspace = true
utoipa.workspace = true
