[package]
name = "batlehub-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
anyhow.workspace = true
tracing.workspace = true
metrics.workspace = true
utoipa.workspace = true
regex.workspace = true
semver.workspace = true
sha1 = "0.11"
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
# Ed25519-only signature verification (download path). RSA-based crypto (the
# `rsa` crate) is hard-banned by deny.toml; Ed25519 keeps the tree rsa-free.
ed25519-dalek = "2"

[lints]
workspace = true
