[package]
name = "batlehub-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
batlehub-core = { path = "../core" }
batlehub-config = { path = "../config" }
batlehub-adapters = { path = "../adapters" }
async-trait.workspace = true
actix-web.workspace = true
actix-files.workspace = true
actix-multipart = "0.7"
reqwest.workspace = true
utoipa.workspace = true
utoipa-actix-web.workspace = true
utoipa-scalar.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
futures.workspace = true
tokio.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder", "native-tls"], default-features = false }
quick-xml = { workspace = true }
base64 = "0.22"
zip = "8"

[dev-dependencies]
batlehub-adapters = { path = "../adapters" }
actix-http = "3"
flate2 = "1"
tar = "0.4"
tempfile.workspace = true
mockito = "1"

[lints]
workspace = true
