[package]
name = "batlehub-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
batlehub-core = { path = "../core" }
batlehub-config = { path = "../config" }
batlehub-adapters = { path = "../adapters" }
async-trait.workspace = true
actix-web.workspace = true
actix-files.workspace = true
actix-multipart = "0.8"
reqwest.workspace = true
utoipa.workspace = true
utoipa-actix-web.workspace = true
utoipa-scalar.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
futures.workspace = true
tokio.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
sha2.workspace = true
hmac = "0.13"
hex.workspace = true
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder", "native-tls"], default-features = false }
quick-xml = { workspace = true }
base64.workspace = true
zip.workspace = true

[dev-dependencies]
batlehub-adapters = { path = "../adapters" }
actix-http = "3"
ar = "0.9"
# Test-only: build `.tar.bz2` conda package fixtures.
bzip2 = "0.6"
flate2 = "1"
# Test-only: build `.rpm` fixtures via `rpm::PackageBuilder` (the `payload` feature).
# No `rsa` — that only arrives via `signature-pgp`, which we never enable.
rpm = { version = "0.25", default-features = false, features = ["payload", "gzip-compression"] }
tar = "0.4"
tempfile.workspace = true
mockito = "1"

[lints]
workspace = true
