[package]
name = "sqlx-macros"
version = "0.8.6"
edition = "2021"
description = "Local stub — replaces crates.io sqlx-macros to keep sqlx-mysql/rsa out of the lock file. This crate is never compiled (the sqlx `macros` feature is disabled); the stub exists only so Cargo resolves zero transitive deps for this optional sqlx dep."

[lib]
proc-macro = true

# Empty feature stubs matching what sqlx activates via `sqlx-macros?/...` weak syntax.
# Without these, Cargo rejects sqlx 0.8.6 with "feature X not found".
[features]
default = []
derive = []
macros = []
migrate = []
mysql = []
postgres = []
sqlite = []
sqlite-unbundled = []
any = []
json = []
bigdecimal = []
bit-vec = []
chrono = []
ipnet = []
ipnetwork = []
mac_address = []
rust_decimal = []
time = []
uuid = []
_rt-async-std = []
_rt-tokio = []
_tls-native-tls = []
_tls-rustls-aws-lc-rs = []
_tls-rustls-ring-webpki = []
_tls-rustls-ring-native-roots = []
legacy-test-util = []
test-util = []
wire-mock = []
