[package]
name = "sqlx-macros"
version = "0.9.0"
edition = "2021"
description = "Local stub — replaces crates.io sqlx-macros to keep sqlx-mysql/rsa out of the lock file. This crate is never compiled (the sqlx `macros` feature is disabled); the stub exists only so Cargo resolves zero transitive deps for this optional sqlx dep."

[lib]
proc-macro = true

# Empty feature stubs matching what sqlx activates via `sqlx-macros?/...` weak syntax.
# Without these, Cargo rejects the sqlx version with "feature X not found".
[features]
default = []
derive = []
macros = []
offline = []
migrate = []
sqlx-toml = []
mysql = []
mysql-rsa = []
postgres = []
sqlite = []
sqlite-unbundled = []
sqlite-load-extension = []
any = []
json = []
bigdecimal = []
bit-vec = []
chrono = []
ipnet = []
ipnetwork = []
mac_address = []
rust_decimal = []
time = []
uuid = []
_rt-async-std = []
_rt-async-global-executor = []
_rt-smol = []
_rt-tokio = []
_tls-native-tls = []
_tls-rustls-aws-lc-rs = []
_tls-rustls-ring-webpki = []
_tls-rustls-ring-native-roots = []
legacy-test-util = []
test-util = []
wire-mock = []
